Ajout des composants pour la gestion des privilèges (`AddPrivilegeModal`, `EditPrivilegeModal`, `PrivilegesList`, `PrivilegesManagement`). Implémentation des hooks React Query pour gérer les privilèges (`usePrivileges`, `useCreatePrivilege`, `useUpdatePrivilege`). Refonte de l'interface de gestion des privilèges avec support pour recherche, filtres et pagination.

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -178,5 +178,9 @@
     "account-settings": "Account settings",
     "logout": "Logout",
 
-    "more-items": "More Items"
+    "more-items": "More Items",
+
+    "administration": "Administration",
+    "types": "Types",
+    "privileges": "Privileges"
 }
