Ajout de la gestion des profils avec visualisation, création, modification, et suppression. Intégration des hooks React Query pour les profils (`useSearchProfile`, `usePrivilegesByRoleCodes`) et mise à jour du menu et des routes avec une nouvelle section "Profils".

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -182,5 +182,7 @@
 
     "administration": "Administration",
     "types": "Types",
-    "privileges": "Privileges"
+    "privileges": "Privileges",
+    "roles": "Roles",
+    "profiles": "Profiles"
 }
