--- a/src/utils/locales/fr.json
+++ b/src/utils/locales/fr.json
@@ -182,5 +182,7 @@
 
     "administration": "Administration",
     "types": "Types",
-    "privileges": "Privilèges"
+    "privileges": "Privilèges",
+    "roles": "Rôles",
+    "profiles": "Profils"
 }
