--- a/src/utils/locales/ro.json
+++ b/src/utils/locales/ro.json
@@ -182,5 +182,7 @@
 
     "administration": "Administrare",
     "types": "Tipuri",
-    "privileges": "Privilegii"
+    "privileges": "Privilegii",
+    "roles": "Roluri",
+    "profiles": "Profiluri"
 }
