Ajout des alertes flottantes pour gérer les feedbacks des actions (succès/erreur) dans les modals utilisateurs et profils. Mise à jour des icônes du menu "Administration" et correction de la traduction pour "Utilisateurs".

--- a/src/utils/locales/fr.json
+++ b/src/utils/locales/fr.json
@@ -9,7 +9,7 @@
     "chart": "Graphique",
 
     "application": "Application",
-    "users": "Utilisatrices",
+    "users": "Utilisateurs",
     "social-profile": "Profil social",
     "account-profile": ",Profil du compte",
     "profile": "Profil",
